# pushk2pre2spc

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
examples/: trix1.scr  trix2.scr  trix3.scr
src/: allerrs.hpp  main.cpp  main.hpp  showresults.cpp  showresults.hpp
src/misc/: fileio.cpp  fileio.hpp
src/mods/: argspars.hpp  memarrblk.hpp
tests/: unittest1.py
